# vitrail

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  biome.json  package-lock.json  package.json
vitrail-core/: Cargo.toml
vitrail-core/src/: lib.rs  migrations.rs  schema.rs  tests.rs  validation.rs
vitrail-d1/: Cargo.toml
vitrail-d1-core/: Cargo.toml
vitrail-d1-core/src/: batch.rs  client.rs  delete.rs  error.rs  executor.rs  insert.rs  lib.rs  query.rs  row.rs  session.rs  statement.rs  tests.rs  update.rs
vitrail-d1-macros/: Cargo.toml
vitrail-d1-macros/src/: lib.rs
vitrail-d1-macros/tests/ui/fail/: too_many_columns.rs  too_many_columns.stderr
vitrail-d1-macros/tests/ui/pass/: all_operations.rs
vitrail-d1/src/: cli.rs  lib.rs  migration.rs
vitrail-d1/tests/: migrations.rs
vitrail-macros-core/: Cargo.toml
vitrail-macros-core/src/: delete.rs  embedded_migrations.rs  filter.rs  helper_macro.rs  insert.rs  lib.rs  order.rs  query.rs  schema.rs  update.rs  write.rs
vitrail-macros-core/src/schema/: delete_helpers.rs  filter_helpers.rs  helpers.rs  insert_helpers.rs  order_helpers.rs  query_helpers.rs  update_helpers.rs
vitrail-pg/: Cargo.toml
vitrail-pg-core/: Cargo.toml
vitrail-pg-core/src/: client.rs  delete.rs  filter.rs  insert.rs  lib.rs  migration.rs  migrator.rs  query.rs  schema.rs  tests.rs  transaction.rs  update.rs  validation.rs
vitrail-pg-macros/: Cargo.toml
vitrail-pg-macros/src/: delete.rs  embedded_migrations.rs  filter.rs  insert.rs  lib.rs  macro_inputs.rs  order.rs  query.rs  schema.rs  update.rs
vitrail-pg-macros/src/schema/: delete_helpers.rs  filter_helpers.rs  helpers.rs  insert_helpers.rs  order_helpers.rs  query_helpers.rs  update_helpers.rs
vitrail-pg-macros/tests/ui/fail/: composite_index_relation_field.rs  composite_index_unknown_field.rs  composite_index_unknown_field.stderr  composite_unique_unknown_field.rs  compound_primary_key_mixed_id.rs  compound_primary_key_optional_field.rs  compound_primary_key_optional_field.stderr  compound_primary_key_unknown_field.rs  compound_primary_key_unknown_field.stderr  db_uuid_non_string.rs  db_uuid_non_string.stderr  db_uuid_with_rust_ty.rs  db_uuid_with_rust_ty.stderr  delete_in_without_variables.rs  delete_in_without_variables.stderr  delete_many_unknown_model.rs  delete_many_unknown_model.stderr  delete_not_without_variables.rs  delete_not_without_variables.stderr  duplicate_field.rs  duplicate_field.stderr  duplicate_model.rs  duplicate_model.stderr  external_table_outside_public_schema.rs  external_table_outside_public_schema.stderr  index_on_relation_field.rs  insert_input_missing_required_field.rs  insert_input_missing_required_field.stderr  insert_input_relation_field.rs  insert_input_relation_field.stderr  insert_input_wrong_type.rs  insert_input_wrong_type.stderr  insert_macro_missing_required_field.rs  insert_macro_missing_required_field.stderr  insert_result_mismatched_input_model.rs  insert_result_mismatched_input_model.stderr  insert_result_missing_input.rs  insert_result_missing_input.stderr  insert_result_relation_field.rs  insert_result_relation_field.stderr  (+56 more)
vitrail-pg-macros/tests/ui/pass/: composite_unique.rs  compound_primary_key.rs  custom_string_rust_type.rs  db_uuid.rs  delete_helper_local_variable_capture.rs  external_tables.rs  filter_helper_input_variants.rs  indexes.rs  inferred_relations.rs  query_pagination.rs  relation_list.rs  update_helper_local_variable_capture.rs  valid_delete.rs  valid_delete_helper.rs  valid_delete_helper_not.rs  valid_delete_not.rs  valid_in_filters.rs  valid_insert.rs  valid_query.rs  valid_query_order.rs  valid_schema.rs  valid_update.rs  valid_update_helper.rs  valid_update_helper_not.rs  valid_update_not.rs
vitrail-pg/src/: cli.rs  lib.rs
vitrail-pg/tests/: pg.rs  pg_query.rs  pg_statements.rs
vitrail-pg/tests/fixtures/pg_migrations/: base.prisma  base_to_expanded.sql  bigint.prisma  empty_to_base.sql  empty_to_bigint.sql  empty_to_expanded.sql  empty_to_optional_one_to_one.sql  expanded.prisma  external_only_to_base.sql  optional_one_to_one.prisma  prisma.external.config.ts
vitrail-pg/tests/pg/: bigint.rs  bytes.rs  custom_types.rs  decimal.rs  delete.rs  insert.rs  migrations.rs  migrator.rs  query.rs  statements.rs  support.rs  transaction.rs  update.rs  uuid.rs
vitrail-sqlite/: Cargo.toml
vitrail-sqlite-core/: Cargo.toml
vitrail-sqlite-core/src/: client.rs  delete.rs  filter.rs  insert.rs  lib.rs  migration.rs  migrator.rs  query.rs  schema.rs  statement.rs  tests.rs  transaction.rs  update.rs  validation.rs
vitrail-sqlite-dialect/: Cargo.toml
vitrail-sqlite-dialect/src/: d1_tests.rs  delete.rs  error.rs  filter.rs  flavor.rs  insert.rs  lib.rs  migration.rs  query.rs  schema.rs  statement.rs  tests.rs  update.rs
vitrail-sqlite-macros/: Cargo.toml
vitrail-sqlite-macros/src/: lib.rs
vitrail-sqlite-macros/tests/ui/fail/: autoincrement_non_primary_key.rs  autoincrement_non_primary_key.stderr  bigint_autoincrement.rs  bigint_autoincrement.stderr  composite_index_relation_field.rs  composite_index_relation_field.stderr  composite_index_unknown_field.rs  composite_unique_unknown_field.rs  composite_unique_unknown_field.stderr  compound_primary_key_autoincrement.rs  compound_primary_key_autoincrement.stderr  compound_primary_key_mixed_id.rs  compound_primary_key_mixed_id.stderr  compound_primary_key_optional_field.rs  compound_primary_key_unknown_field.rs  db_uuid.rs  db_uuid.stderr  decimal.rs  decimal.stderr  delete_in_without_variables.rs  delete_in_without_variables.stderr  delete_many_unknown_model.rs  delete_many_unknown_model.stderr  delete_not_without_variables.rs  delete_not_without_variables.stderr  duplicate_field.rs  duplicate_field.stderr  duplicate_model.rs  duplicate_model.stderr  index_on_relation_field.rs  (+72 more)
vitrail-sqlite/src/: cli.rs  lib.rs
vitrail-sqlite/tests/: sqlite.rs
vitrail-sqlite/tests/sqlite/: bigint.rs  bytes.rs  custom_types.rs  delete.rs  insert.rs  migrations.rs  migrator.rs  query.rs  statements.rs  support.rs  transaction.rs  update.rs
(+84 files in other folders)
