[workspace]
members = [
    "vitrail-pg",
    "vitrail-pg-core",
    "vitrail-pg-macros",
]
resolver = "3"

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "env"] }
futures-util = "0.3.32"
heck = "0.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono", "json"] }
syn = { version = "2.0.117", features = ["parsing", "printing", "proc-macro"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0.116"
url = "2.5.8"
vitrail-pg-core = { path = "./vitrail-pg-core" }
vitrail-pg-macros = { path = "./vitrail-pg-macros" }
vitrail-pg = { path = "./vitrail-pg" }
