[workspace]
members = [
    "vitrail-core",
    "vitrail-d1",
    "vitrail-d1-core",
    "vitrail-d1-macros",
    "vitrail-macros-core",
    "vitrail-pg",
    "vitrail-pg-core",
    "vitrail-pg-macros",
    "vitrail-sqlite",
    "vitrail-sqlite-core",
    "vitrail-sqlite-dialect",
    "vitrail-sqlite-macros",
    "examples/d1-worker",
    "examples/workspace/example-app",
    "examples/workspace/example-db",
    "tests/d1",
]
resolver = "3"

[workspace.package]
version = "0.0.12"
repository = "https://github.com/xJonathanLEI/vitrail"

[workspace.dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "env"] }
example-db = { path = "./examples/workspace/example-db" }
futures-util = "0.3.32"
heck = "0.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
rust_decimal = "1.41.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", default-features = false }
syn = { version = "2.0.117", features = ["parsing", "printing", "proc-macro"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
trybuild = "1.0.116"
url = "2.5.8"
uuid = "1.23.0"
worker = { version = "=0.8.5", features = ["d1"] }
vitrail-core = { version = "0.0.12", path = "./vitrail-core" }
vitrail-d1-core = { version = "0.0.12", path = "./vitrail-d1-core" }
vitrail-d1-macros = { version = "0.0.12", path = "./vitrail-d1-macros" }
vitrail-d1 = { version = "0.0.12", path = "./vitrail-d1" }
vitrail-macros-core = { version = "0.0.12", path = "./vitrail-macros-core" }
vitrail-pg-core = { version = "0.0.12", path = "./vitrail-pg-core" }
vitrail-pg-macros = { version = "0.0.12", path = "./vitrail-pg-macros" }
vitrail-pg = { version = "0.0.12", path = "./vitrail-pg" }
vitrail-sqlite-core = { version = "0.0.12", path = "./vitrail-sqlite-core" }
vitrail-sqlite-dialect = { version = "0.0.12", path = "./vitrail-sqlite-dialect" }
vitrail-sqlite-macros = { version = "0.0.12", path = "./vitrail-sqlite-macros" }
vitrail-sqlite = { version = "0.0.12", path = "./vitrail-sqlite" }
