[package]
name = "vitrail-core"
version.workspace = true
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository.workspace = true
description = "Backend-neutral core types for Vitrail dialect crates"

[dependencies]
chrono.workspace = true
heck.workspace = true
