[package]
name = "vitrail-d1-core"
version.workspace = true
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository.workspace = true
description = "Core Cloudflare D1 runtime support for Vitrail"

[dependencies]
chrono.workspace = true
futures-util.workspace = true
serde_json.workspace = true
vitrail-sqlite-dialect.workspace = true
worker.workspace = true
