[package]
name = "vitrail-macros-core"
version.workspace = true
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository.workspace = true
description = "Backend-neutral macro expansion internals for Vitrail dialect crates"

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
vitrail-core.workspace = true

[dev-dependencies]
vitrail-pg-core.workspace = true
