[package]
name = "vitrail-pg-core"
version.workspace = true
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository.workspace = true
description = "Core types for the vitrail-pg crate"

[dependencies]
chrono.workspace = true
rust_decimal.workspace = true
futures-util.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono", "json", "rust_decimal", "uuid", "any", "macros", "migrate"] }
url.workspace = true
uuid.workspace = true
vitrail-core.workspace = true
