[package]
name = "vitrail-pg-macros"
version.workspace = true
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository.workspace = true
description = "Procedural macros for the vitrail-pg crate"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
vitrail-macros-core.workspace = true
vitrail-pg-core.workspace = true

[dev-dependencies]
chrono.workspace = true
sqlx = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono", "json", "rust_decimal", "uuid"] }
trybuild.workspace = true
vitrail-pg-core.workspace = true
