[package]
name = "vitrail-pg"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2024"
description = "PostgreSQL support for vitrail"

[dependencies]
chrono.workspace = true
clap.workspace = true
sqlx.workspace = true
tokio.workspace = true
url.workspace = true
vitrail-pg-core.workspace = true
vitrail-pg-macros.workspace = true

[[example]]
name = "pg_query_ad_hoc"
path = "../examples/pg_query_ad_hoc.rs"

[[example]]
name = "pg_query_model_first"
path = "../examples/pg_query_model_first.rs"
