[package]
name = "vitrail-sqlite-core"
version.workspace = true
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository.workspace = true
description = "Core schema and migration types for the vitrail-sqlite crate"

[dependencies]
chrono.workspace = true
futures-util.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "chrono"] }
vitrail-core.workspace = true
