[package]
name = "vitrail-sqlite-dialect"
version.workspace = true
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2024"
repository.workspace = true
description = "Runtime-neutral SQLite-family dialect support for Vitrail"

[dependencies]
chrono.workspace = true
serde_json.workspace = true
vitrail-core.workspace = true
