[package]
name = "vitrail-sqlite"
version.workspace = true
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"
repository.workspace = true
description = "SQLite support for vitrail"

[dependencies]
chrono.workspace = true
clap.workspace = true
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "chrono"] }
vitrail-sqlite-core.workspace = true
vitrail-sqlite-macros.workspace = true

[dev-dependencies]
tokio.workspace = true

[[example]]
name = "sqlite_migration_cli"
path = "../examples/sqlite/migration_cli.rs"
